<resources>

    <!--header-->
    <string name="app_profile">Профиль</string>
    <string name="app_list_of_events">Список мероприятий</string>
    <string name="app_organizer">Организатор</string>
    <string name="app_event_report">Отчёт о мероприятии</string>

    <!--login_account-->
    <string name="app_enter">Войти</string>
    <string name="app_register">Зарегистрироваться</string>
    <string name="app_email">Почта</string>
    <string name="app_password">Пароль</string>


    <!--activity_main-->

    <string name="app_name">Volonter</string>
    <string name="app_header">Профиль</string>
    <string name="app_full_name">Зубенко Михаил Петрович</string>

    <string name="app_status_class">Бриллиантовый</string>
    <string name="app_status_info">Статус волонтёра</string>


    <string name="app_main_scores">Баллы волонтёра</string>
    <string name="app_main_scores_number">1000</string>
    <string name="app_main_planned">Запланированных мероприятий</string>
    <string name="app_main_planned_number">3</string>
    <string name="app_main_completed">Количество пройденных мероприятий</string>
    <string name="app_main_completed_number">15</string>


    <!--registration_for_the_event-->
    <string name="app_check_events_1">Мероприятие</string>
    <string name="app_check_events_2">№2724788</string>

    <!--organizer_create-->
    <string name="app_organizer_create">Создание мероприятия</string>

    <!--show_organizer_event-->
    <string name="app_show_organizer_event">Управление мероприятием</string>

    <!--my_events_list-->
    <string name="app_my_events_list">Мои события</string>


    <!--my_events-->
    <string name="app_my_events_1">Мероприятие</string>
    <string name="app_my_events_2">№2724788</string>

    <!--request-->
    <string name="app_request">Заявки</string>
    <string name="app_request_toggle1">Новые\nучастники</string>
    <string name="app_request_toggle2">Заявки на\nмероприятия</string>
    <string name="app_request_user">Данные пользователя</string>
    <string name="app_request_user_create">Добавить пользователя</string>

    <!--user_data-->
    <string name="app_user_data_name">Имя</string>
    <string name="app_user_data_secname">Фамилия</string>
    <string name="app_user_data_data">Дата рождения</string>
    <string name="app_user_data_email">Почта</string>
    <string name="app_user_data_post">Должность</string>

    <!--direction-->
    <string-array name="direction">
        <item>Социальное</item>
        <item>Экологическое</item>
        <item>Культурное</item>
        <item>Спортивное</item>
        <item>Патриотическое</item>
        <item>Корпоративное</item>
        <item>Медиаволонтёрство</item>
        <item>Зооволонтёрство</item>
    </string-array>

    <!--post-->
    <string-array name="post">
        <item>Студент</item>
        <item>Вожатый</item>
    </string-array>

</resources>